<resources>

    <string name="app_name">PaisanoGo</string>
    <string name="setting_empresas">Setting Empresas</string>
    <string name="modificar_cif">Modificar CIF</string>
    <string name="modificar_usuario">Modificar Usuario</string>
    <string name="modificar_nombre_empresa">Modificar Nombre Empresa</string>
    <string name="modificar_direccion">Modificar Dirección</string>
    <string name="modificar_codigo_postal">Modificar Código Postal</string>
    <string name="modificar_telefono">Modificar Teléfono</string>
    <string name="modificar_email">Modificar Email</string>
    <string name="modificar_password">Modificar Password</string>
    <string name="confirmar_password">Confirmar Password</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="configuración">Configuración</string>
    <string name="setting">Setting</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="clientes">Clientes</string>
    <string name="si_no_tienes_cuenta">Si no tienes cuenta</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro_clientes">Registro Clientes</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="registro_empresas">Registro Empresas</string>
    <string name="cif">CIF</string>
    <string name="nombre_empresa">Nombre Empresa</string>
    <string name="direccion">Dirección</string>
    <string name="eres_empresa_o_cliente">Eres empresa o cliente</string>
    <string name="empresa">Empresa</string>
    <string name="cliente">Cliente</string>
    <string name="agenda">Agenda</string>
    <string name="inicio">Inicio</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="volver_al_inicio">Volver al Inicio</string>
    <string name="open">Abrir</string>
    <string name="close">Cerrar</string>
    <string name="eres_cliente_o_empresa_largo">Eres cliente o empresa</string>
    <string name="paisanogo">PaisanoGo</string>
    <string name="paisanogo_gmail_com">paisanoGo@gmail.com</string>
    <string name="menu">Menu</string>
    <string name="calendario_citas">Calendario Citas</string>
    <string name="calendario_citas_empresa">Calendario Citas Empresa</string>
    <string name="subir">Subir</string>
    <string name="cancelar">Cancelar</string>
    <string name="userid">userID</string>
    <string name="EMPRESAS">EMPRESAS</string>
    <string name="subir_imagen">Subir Imagen</string>
    <string name="espacio">: </string>
    <string name="correo">Correo</string>
    <string name="localization">Localización</string>
    <string name="llamada">Llamar</string>
    <string name="imagen_empresa">Imagen Empresa</string>
    <string name="titulo_interacciones">ESTAS SON TUS INTERACCIONES</string>
    <string name="boton_login">Botón login</string>
    <string name="salir_a_login_anterior">Salir a Login anterior</string>
    <string name="llamadas_de_clientes">Llamadas de Clientes:</string>
    <string name="tienes_emails">Emails de Clientes:</string>
    <string name="los_clientes_han_buscado_tu_direccion">Los Clientes han buscado tu dirección:</string>
    <string name="textClientes">Clientes</string>
    <string name="error_cargando_citas">Error cargando citas.</string>
    <string name="confirmar_fecha">Confirmar Fecha</string>
    <string name="detalles_de_la_cita">Detalles de la cita</string>
    <string name="d_a_seleccionado">Día seleccionado: </string>
    <string name="dia_seleccionado">Día seleccionado: </string>
    <string name="error_al_buscar_citas">Error al buscar citas.</string>
    <string name="fecha">Fecha</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="error">Error</string>
    <string name="actualiza_tu_informacion">Actualiza tu Información</string>
    <string name="manten_informacion">Mantén tu información al día para una mejor experiencia</string>
    <string name="day">1</string>
    <string name="nombre">Nombre</string>
    <string name="contrasena">Contraseña</string>
    <string name="imagen">Imagen</string>
    <string name="aceptar">Aceptar</string>
    <string name="por_favor_ingrese_su_contrase_a_actual_para_continuar">Por favor, ingrese su contraseña actual para continuar</string>
    <string name="reautenticaci_n_requerida">Reautenticación requerida</string>
    <string name="buscar_empresa">Buscar empresa</string>
    <string name="eliminar_cita">Eliminar Cita</string>
    <string name="buscar">Buscar</string>
    <string name="estas_seguro">¿Estas seguro de que quieres eliminar la cita?</string>
    <string name="elige_la_cita_que_quieres_eliminar">Elige la cita que quieres eliminar</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
</resources>