<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu">

    <item android:id="@+id/calendar"
            android:icon="@drawable/calendario"
            android:title="@string/agenda"
            app:showAsAction="ifRoom"/>

    <item android:id="@+id/inicio"
            android:icon="@drawable/casa"
            android:title="@string/inicio"
            app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/setting"
        android:icon="@drawable/configuraciones"
        android:title="@string/setting"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/logout"
        android:icon="@drawable/acceso"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>

</menu>