<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/citasLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar_cita"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/estas_seguro"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/detalleCita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elige_la_cita_que_quieres_eliminar"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/btnBorrarCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/blueDark"
            android:textColor="@color/white"
            android:text="@string/aceptar"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnCancelBorrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/red"
            android:textColor="@color/white"
            android:text="@string/cancelar"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>