<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.proyectopaisanogo.Presentation.mainEmpresa">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RvEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/llamadas_de_clientes"
                android:textColor="@color/blueDark"
                android:fontFamily="@font/typo_irregular"
                android:layout_margin="@dimen/size_extra_extra_small"/>

            <TextView
                android:id="@+id/textLlamadas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/amarillo"
                android:text="@string/llamada"
                android:fontFamily="@font/typo_irregular"
                android:layout_margin="@dimen/size_extra_extra_small"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tienes_emails"
                android:textColor="@color/blueDark"
                android:fontFamily="@font/typo_irregular"
                android:layout_margin="@dimen/size_extra_extra_small"/>

            <TextView
                android:id="@+id/textEmails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/amarillo"
                android:text="@string/email"
                android:fontFamily="@font/typo_irregular"
                android:layout_margin="@dimen/size_extra_extra_small"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blueDark"
                android:fontFamily="@font/typo_irregular"
                android:text="@string/los_clientes_han_buscado_tu_direccion"
                android:layout_margin="@dimen/size_extra_extra_small"/>

            <TextView
                android:id="@+id/textDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/amarillo"
                android:text="@string/direccion"
                android:fontFamily="@font/typo_irregular"
                android:layout_margin="@dimen/size_extra_extra_small"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu" >

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
