<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.proyectopaisanogo.Presentation.settingEmpresa">

    <!-- Contenedor principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <!-- Contenido principal -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="177dp"
                android:layout_height="118dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="21dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="212dp"
                android:src="@drawable/paisano" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="199dp"
                android:layout_marginTop="47dp"
                android:layout_marginEnd="22dp"
                android:text="@string/setting_empresas"
                android:textAlignment="center"
                android:textColor="#065CA1"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextCifEmpresa"
                android:layout_width="309dp"
                android:layout_height="55dp"
                android:layout_below="@+id/imageView5"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="33dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="69dp"
                android:ems="10"
                android:hint="@string/modificar_cif"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextNomEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_below="@+id/editTextCifEmpresa"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="34dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="78dp"
                android:ems="10"
                android:hint="@string/modificar_nombre_empresa"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextDireccionEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_below="@+id/editTextNomEmpresa"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="34dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="27dp"
                android:ems="10"
                android:hint="@string/modificar_direccion"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/editTextCpEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_below="@+id/editTextDireccionEmpresa"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="34dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="155dp"
                android:ems="10"
                android:hint="@string/modificar_codigo_postal"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/editTextTelefonoEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:layout_below="@+id/editTextCpEmpresa"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="33dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="96dp"
                android:ems="10"
                android:hint="@string/modificar_telefono"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editTextEmailEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_below="@+id/editTextTelefonoEmpresa"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="33dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="35dp"
                android:ems="10"
                android:hint="@string/modificar_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextTextPassword3"
                android:layout_width="285dp"
                android:layout_height="56dp"
                android:layout_below="@+id/editTextEmailEmpresa"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="33dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="93dp"
                android:layout_marginBottom="0dp"
                android:ems="10"
                android:hint="@string/modificar_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonRegistroEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_below="@+id/editTextTextPassword3"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="67dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="90dp"
                android:backgroundTint="#03A9F4"
                android:text="@string/guardar_cambios"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>

    <!-- NavigationView -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu" />

</androidx.drawerlayout.widget.DrawerLayout>